# python-library-test

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
tests/: test_example.py
