[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "python-library-test"
version = "0.0.1"
authors = [
  { name="Kurt McAlpine", email="kurt@linux.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3==1.23.6"
]

[project.urls]
"Homepage" = "https://github.com/kurtmc/python-library-test"
"Bug Tracker" = "https://github.com/kurtmc/python-library-test/issues"
