[metadata]
name = python-library-test
version = 0.0.1
author = Kurt McAlpine
author_email = kurt@linux.com
description = An example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kurtmc/python-library-test
project_urls =
    Bug Tracker = https://github.com/kurtmc/python-library-test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3==1.23.6


[options.packages.find]
where = src
